--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "url": "https://github.com/jamiew/hubot-ipfs/issues"
   },
   "dependencies": {
-    "ipfs-api": "^22.1.1",
+    "ipfs-api": "github:ipfs/js-ipfs-api#f77bbf59392bd4ea5ed04db46882ed265fcdd231",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
