--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "coveralls": "^3.0.1",
+    "coveralls": "^3.0.2",
     "hubot": "^3.0.1",
     "hubot-mock-adapter-v3": "^1.0.1",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
-    "sinon": "^6.0.1",
+    "semantic-release": "^15.8.1",
+    "sinon": "^6.1.4",
     "sinon-chai": "^3.2.0",
-    "standard": "^11.0.1",
-    "semantic-release": "^15.6.0"
+    "standard": "^11.0.1"
   }
 }
